
plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

version = '4.6'

application {
    // Define the main class for the application.
    mainClass = 'Mars'
}

java {
    withJavadocJar()
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

javadoc {
}

jar {
    manifest {
        attributes['Implementation-Title'] = project.name
        attributes['Implementation-Version'] = project.version
        attributes['Main-Class'] = application.mainClass
    }
}

dependencies {
    implementation 'com.formdev:flatlaf:3.6.2'
}
